# www-project-top-10-for-large-language-model-applications

initiatives/genai_red_team_handbook/exploitation/agent0/: .gitignore  Makefile  README.md  run_agent.py
initiatives/genai_red_team_handbook/exploitation/agent0/config/: settings.json
initiatives/genai_red_team_handbook/exploitation/agent0/prompts/: MITRE_RAG_AML_T0070_T0071_v2025.md  OWASP_Top10_LLM_App.md  OWASP_Top10_LLM_App_v2025.md  OWASP_Top10_v2021.md
initiatives/genai_red_team_handbook/exploitation/agent0/reports/: Agent Zero - 2025-11-25.htm
initiatives/genai_red_team_handbook/exploitation/example/: Makefile
initiatives/genai_red_team_handbook/exploitation/garak/: .gitignore  Makefile  README.md
initiatives/genai_red_team_handbook/exploitation/garak/reports/: GenAI-Red-Team.report.html
initiatives/genai_red_team_handbook/exploitation/promptfoo/: Makefile  README.md  package-lock.json  package.json  promptfooconfig.yaml
initiatives/genai_red_team_handbook/sandbox_templates/: README.md
initiatives/genai_red_team_handbook/sandbox_templates/llm_local/: Containerfile  README.md  pyproject.toml
initiatives/genai_red_team_handbook/sandbox_templates/llm_local/app/mocks/: README.md  openai.py
initiatives/genai_red_team_handbook/sandbox_templates/llm_local/client/: main.py
initiatives/genai_red_team_handbook/sandboxes/: README.md
initiatives/genai_red_team_handbook/sandboxes/RAG_local/: .gitignore  Makefile
initiatives/genai_red_team_handbook/sandboxes/llm_local/: .gitignore  Makefile
(+6 files in other folders)
